--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+
+#thymeleafÄ£°æÇ°×º
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
+
+#ÅäÖÃtomcatµÄ±àÂë
+server.tomcat.uri-encoding=utf-8
